# rust_runtimes_sample

./: Cargo.toml  README.md  docker-compose.yaml
.cargo/: config
.github/workflows/: check.yml  docker.yml
app-server/: Cargo.toml  Dockerfile
app-server/src/: main.rs
docker/app-server/: Dockerfile
runtimes/onnx-runtime/: Cargo.toml
runtimes/onnx-runtime/src/: lib.rs
runtimes/wasm-runtime/: Cargo.toml
src/: execute.rs  main.rs
