[package]
name = "app-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onnx-runtime = { path = "../runtimes/onnx-runtime" }
wasm-runtime = { path = "../runtimes/wasm-runtime" }
actix-web = "4.4.1"
async-graphql = "6.0.11"
async-graphql-actix-web = "6.0.11"
slab = "0.4.9"
log = "0.4.20"
env_logger = "0.10.1"
