[package]
name = "app-server"
version = "0.1.0"
edition = "2021"

[dependencies]
onnx-runtime = { path = "../runtimes/onnx-runtime" }
wasm-runtime = { path = "../runtimes/wasm-runtime" }
actix-web = "4.4.1"
async-graphql = "7.0.0"
async-graphql-actix-web = "7.0.0"
slab = "0.4.9"
log = "0.4.20"
env_logger = "0.11.0"
